--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
 }
 
 header h1 {
-  color: #fff;
+  color: #ffffff;
   font-family: Inter;
   font-size: 24px;
   font-weight: 600;
@@ -29,7 +29,7 @@ header img {
   width: 25px;
 }
 
-h2 {
+.postTitle {
   color: #3a4f9a;
   font-family: Inter;
   font-size: 36px;
@@ -48,7 +48,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 35px 250px;
+  margin: 60px 15px;
 }
 
 .postContent {
@@ -71,9 +71,10 @@ h2 {
 
 .postImage {
   border-radius: 10px 10px 0 0;
-  height: 450px;
+  height: 350px;
   object-fit: cover;
   width: 100%;
+  object-position: top;
 }
 
 .expandLink {
@@ -96,9 +97,8 @@ h2 {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   flex-shrink: 0;
   height: auto;
-  margin: 10px;
+  margin: 30px;
   overflow: hidden;
-  padding: 0;
   width: 25%;
 }
 
@@ -112,4 +112,101 @@ h2 {
   line-height: 20px;
   margin: 20px 20px;
   padding: 0 10px;
+}
+
+.detailedPost {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 0px 0px 5px 5px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+.detailedPostImage {
+  height: 400px;
+  object-fit: cover;
+  width: 100%;
+}
+
+.detailedPostTitle {
+  color: #3a4f9a;
+  font-size: 17px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 2px;
+  padding-top: 10px;
+  padding-left: 50px;
+}
+
+.detailedPostContent {
+  color: #575757;
+  font-size: 13px;
+  font-family: Inter;
+  font-style: normal;
+  text-align: justify;
+  font-weight: 300;
+  letter-spacing: 1.3px;
+  padding: 0px 50px 15px 50px;
+}
+
+.postButtonImage {
+  background-color: #32325d;
+  position: fixed;
+  top: 80px;
+  left: 50px;
+  margin: 5px;
+  border: 2px solid #32325d;
+  border-radius: 50%;
+  padding: 5px;
+}
+
+.commentsSection {
+  display: flex;
+  flex-direction: column;
+  margin-top: 35px;
+  border: 1px solid #ccc;
+  border-radius: 0px 0px 4px 4px;
+  padding: 10px;
+  margin-top: -1px;
+  margin-bottom: 50px;
+  width: 870px;
+  margin: 0 auto;
+}
+
+.comment {
+  padding: 5px 30px 5px 30px;
+  border-bottom: 1px solid #ccc;
+}
+
+.comment:last-child {
+  margin-bottom: 0;
+  border-bottom: none;
+}
+
+.commentBody {
+  margin: 0;
+  color: #575757;
+  font-size: 13px;
+  font-family: Inter;
+  font-style: italic;
+  font-weight: 100;
+  letter-spacing: 1.6px;
+  text-align: justify;
+}
+
+.commentUsername,
+.commentEmail {
+  color: #3a4f9a;
+  font-size: 13px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 1.6px;
 }
