--- a/styles/common.css
+++ b/styles/common.css
@@ -1,6 +1,8 @@
+@import "global.css";
+
 header {
   align-items: center;
-  background: #32325d;
+  background: var(--secondary-color);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   display: flex;
   gap: 10px;
@@ -14,7 +16,7 @@ header {
 }
 
 header h1 {
-  color: #ffffff;
+  color: var(--highlight-color);
   font-family: Inter;
   font-size: 24px;
   font-weight: 600;
