--- a/styles/detailed.css
+++ b/styles/detailed.css
@@ -1,7 +1,9 @@
+@import "global.css";
+
 .detailedPost {
-  border: 1px solid #ccc;
+  border: 1px solid var(--comment-border-color);
   border-radius: 0px 0px 5px 5px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px 0px var(--box-shadow-color);
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -11,7 +13,7 @@
 }
 
 .detailedPostContent {
-  color: #575757;
+  color: var(--tertiary-color);
   font-family: Inter;
   font-size: 13px;
   font-style: normal;
@@ -28,7 +30,7 @@
 }
 
 .detailedPostTitle {
-  color: #3a4f9a;
+  color: var(--primary-color);
   font-family: Inter;
   font-size: 17px;
   font-style: normal;
@@ -39,8 +41,8 @@
 }
 
 .postButtonImage {
-  background-color: #32325d;
-  border: 2px solid #32325d;
+  background-color: var(--secondary-color);
+  border: 2px solid var(--secondary-color);
   border-radius: 50%;
   left: 50px;
   margin: 5px;
@@ -50,12 +52,12 @@
 }
 
 .comment {
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid var(--comment-border-color);
   padding: 5px 30px;
 }
 
 .commentBody {
-  color: #575757;
+  color: var(--tertiary-color);
   font-family: Inter;
   font-size: 13px;
   font-style: italic;
@@ -67,7 +69,7 @@
 
 .commentEmail,
 .commentUsername {
-  color: #3a4f9a;
+  color: var(--primary-color);
   font-family: Inter;
   font-size: 13px;
   font-style: normal;
@@ -77,7 +79,7 @@
 }
 
 .commentsSection {
-  border: 1px solid #ccc;
+  border: 1px solid var(--comment-border-color);
   border-radius: 0px 0px 4px 4px;
   display: flex;
   flex-direction: column;
