--- a/styles/posts.css
+++ b/styles/posts.css
@@ -1,5 +1,7 @@
+@import "global.css";
+
 .postTitle {
-  color: #3a4f9a;
+  color: var(--primary-color);
   font-family: Inter;
   font-size: 36px;
   font-style: normal;
@@ -21,7 +23,7 @@
 }
 
 .postContent {
-  color: #575757;
+  color: var(--tertiary-color);
   display: -webkit-box;
   font-family: Inter;
   font-size: 15px;
@@ -47,7 +49,7 @@
 }
 
 .expandLink {
-  color: #3a4f9a;
+  color: var(--primary-color);
   display: block;
   font-family: Inter;
   font-size: 15px;
@@ -61,7 +63,7 @@
 }
 
 .postSection {
-  background: #fff;
+  background: var(--highlight-color);
   border-radius: 10px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   flex-shrink: 0;
@@ -73,7 +75,7 @@
 }
 
 #postsContainer h3 {
-  color: #3a4f9a;
+  color: var(--primary-color);
   font-family: Inter;
   font-size: 20px;
   font-style: normal;
